Added modifications on 27-12-2025